# FasalBazar

./: .progress-log  pyproject.toml
backend/: db.py  server.py
backend/middleware/: auth.py
backend/routes/: auth.py  cart.py  chat.py  listings.py  mandi.py  requests.py  reviews.py  transactions.py  translate.py  utils.py
templates/: 1.js  Homepage.css  Homepage.html  Homepage.js  Product_Page.css  Product_Page.html  Product_Page.js  Request_Page.html  Request_Page.js  api.js  buying-script.js  buying.html  chat-listing.html  chat-listing.js  checkout.html  homepage-selling-patches.html  index.html  language-select.html  mandi.html  reverie.js  schema.sql  script.html  script.js  selling-script.js  selling.html  site-translate.js  styles.css  translation-integration-guide.html  voice-listing.html  voice-listing.js
