[project]
name = "fasal-bazaar"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "Flask==3.1.3",
    "flask-cors==6.0.2",
    "Flask-JWT-Extended==4.7.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "psycopg2-binary==2.9.11",
    "PyJWT==2.12.1",
    "python-dotenv==1.2.2",
    "Werkzeug==3.1.6",
    "requests",
    "google-generativeai"
]

[tool.vercel]
entrypoint = "backend.server:app"
